# polis-wassette

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  RELEASE.md
.github/instructions/: github-agentic-workflows.instructions.md
.github/workflows/: changelog-fragment.lock.yml  copilot-setup-steps.yml  examples.yml  issue-triage.lock.yml  pr-triage.lock.yml  release.yml  update-package-manifests.yml
crates/component2json/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: components.rs  hooks.rs  lib.rs  prompts.rs  server.rs  tools.rs
crates/polis-middleware/: Cargo.toml  INTEGRATION.md  README.md
crates/polis-middleware/src/: context.rs  examples.rs  lib.rs  middleware.rs  server.rs
crates/wassette/: Cargo.toml
crates/wassette/src/: component_storage.rs  lib.rs  loader.rs  wasistate.rs
docs/: SUMMARY.md  mcp-clients.md
docs/cookbook/: README.md  go.md  rust.md
docs/deployment/: docker.md  operations.md
docs/development/: go.md  rust.md
docs/reference/: cli.md  configuration-files.md
scripts/: README.md  changelog_utils.py  test_changelog_utils.py
src/: cli_handlers.rs  commands.rs  config.rs  main.rs
tests/: cli_integration_test.rs  file_integration_test.rs  oci_integration_test.rs  structured_output_integration_test.rs  transport_integration_test.rs
