# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.

[package]
name = "polis-middleware"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Middleware layer for Wassette MCP server - hooks into request/response lifecycle"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
mcp-server = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
